--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@fontsource/abel": "^4.5.7",
+    "@fontsource/alegreya-sc": "^4.5.11",
+    "@fontsource/darker-grotesque": "^4.5.9",
+    "@fontsource/open-sans-condensed": "^4.5.5",
+    "@fontsource/rajdhani": "^4.5.10",
+    "@fontsource/special-elite": "^4.5.8",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
